<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcadastro"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        android:layout_width="374dp"
        android:layout_height="331dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrese" />

    <EditText
        android:autofillHints="campo nome"
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:autofillHints="campo email"
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="@string/email_1"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_senha"
        android:autofillHints="campo senha"
        style="@style/Edit_Senha"
        android:hint="@string/senha_1"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_senha2"
        android:autofillHints="campo senha confirm"
        style="@style/Edit_Senha"
        android:hint="@string/repita_a_senha"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/Button2"
        android:text="@string/cadastrar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/seta"
        style="@style/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_seta"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/title_cadastrese"
        app:layout_constraintLeft_toLeftOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>