<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Contato">

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_width="370dp"
            android:layout_height="177dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo" />

        <TextView
            android:id="@+id/texto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_contato"
            android:textStyle="bold"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            android:paddingTop="20dp"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            />

        <TextView
            android:id="@+id/text_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereço"
            android:textStyle="bold"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/texto_email"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            />

        <TextView
            android:id="@+id/texto_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserva_telefone"
            android:textStyle="bold"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/text_endereco"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            />

        <TextView
            android:id="@+id/texto_whats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats"
            android:textStyle="bold"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/texto_telefone"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            />

        <Button
            android:id="@+id/seta"
            style="@style/Button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/icon_seta"
            android:text="@string/voltar"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>