<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservar2"
    android:background="@color/black">

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="DATA E HORARIO"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/selecione_uma_data"
        android:inputType="datetime"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="DATA E HORARIO"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/selecione_uma_data2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="datetime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="410dp"
        android:layout_height="341dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/quarto5grande"
        android:contentDescription="@string/foto_quarto_2"
        />

    <Button
        android:id="@+id/seta"
        style="@style/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/icon_seta"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDate" />

    <Button
        android:id="@+id/buttonConfirm"
        style="@style/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_reserva"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seta"
        app:layout_constraintTop_toBottomOf="@id/editTextDate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
