<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcadastro"
    tools:context=".Quartos">


    <TextView
        android:id="@+id/texto_quarto_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_string_here"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/imageButton2"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="85dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/texto_quarto_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_quarto_5"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/imageButton2"
        app:layout_constraintTop_toBottomOf="@id/texto_quarto_1"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="110sp"
        android:textStyle="bold"
/>

    <TextView
        android:id="@+id/texto_quarto_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_quarto_6"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/imageButton3"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="246sp"
        app:layout_constraintTop_toBottomOf="@id/texto_quarto_1"
        />

    <ImageButton
        android:contentDescription="@string/foto_do_quarto"
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="onClickImageButton"
        android:src="@mipmap/quarto3yagograndao"
        android:paddingLeft="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton1"
        android:paddingTop="30dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

    <ImageButton
        android:contentDescription="@string/foto_quarto_4"
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="onClickImageButton"
        android:paddingLeft="25dp"
        android:paddingTop="50dp"
        android:src="@mipmap/quarto4grande"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:contentDescription="foto do quarto 6"
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="onClickImageButton"
        android:src="@mipmap/quarto5grande"
        app:layout_constraintTop_toBottomOf="@id/imageButton2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="30dp"
        android:paddingLeft="25dp"

        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/seta3"
        style="@style/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_seta"
        android:text="@string/voltar"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="557dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>