<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcadastro"
    tools:context=".TelaPrincipal">

    <View
        android:id="@+id/containerUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/container_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_pessoa"
        android:src="@drawable/iconeperfil"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="@id/containerUser"
        app:layout_constraintStart_toStartOf="@id/containerUser"
        app:layout_constraintTop_toTopOf="@id/containerUser" />

    <ImageView
        android:id="@+id/iconeUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo_pequeno"
        android:src="@drawable/perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerUser" />

    <TextView
        android:id="@+id/textNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/containerUser" />

    <ImageView
        android:id="@+id/iconeEmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo_menor_email"
        android:src="@drawable/iconeemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconeUser" />

    <TextView
        android:id="@+id/textEmailUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/textNomeUsuario" />

    <Button
        android:id="@+id/bt_deslogar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/deslogar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_quartos"
        />

    <Button
        android:id="@+id/bt_quartos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quartos"
        style="@style/Button123"
        app:layout_constraintLeft_toLeftOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/iconeEmail"
        app:layout_constraintBottom_toBottomOf="@id/bt_reservas"
        app:layout_constraintRight_toLeftOf="@id/bt_reservas"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:id="@+id/bt_reservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="292dp"
        android:text="@string/reservas"
        app:layout_constraintBottom_toBottomOf="@id/bt_quartos"
        android:layout_marginStart="15dp"
        style="@style/Button123"
        app:layout_constraintStart_toEndOf="@+id/bt_quartos" />

    <Button
        android:id="@+id/bt_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/contato"
        app:layout_constraintBottom_toBottomOf="@id/bt_reservas"
        android:layout_marginStart="15dp"
        style="@style/Button123"
        app:layout_constraintStart_toEndOf="@id/bt_reservas"
        app:layout_constraintLeft_toRightOf="@id/bt_reservas"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>