<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcadastro"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingTop="80dp"
        android:text="@string/Recuperar"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrese" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:autofillHints="campo email"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_email2"
        style="@style/Edit_Text"
        android:autofillHints="campo email"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        style="@style/Button2"
        android:layout_marginTop="30dp"
        android:text="@string/recuperar_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <Button
        android:id="@+id/seta"
        style="@style/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_seta"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/title_cadastrese"
        app:layout_constraintLeft_toLeftOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>